Updated with latest models and updates and Langchain 1.0

--- a/intro/lab1.ipynb
+++ b/intro/lab1.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "# STRAIGHT TO ACTION!\n",
     "\n",
-    "Welcome to our first Jupyter Lab where we will see rapid, satisfying results!\n",
+    "Welcome to our first Lab where we will see rapid, satisfying results!\n",
     "\n",
     "I will leave with you to try out leading LLMs through their Chat Interfaces\n",
     "\n",
@@ -34,75 +34,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b9f2064-946b-4445-bd9e-44aa58c45e29",
-   "metadata": {},
-   "source": [
-    "## Part 1: For you to experiment: Frontier models through their Chat UI\n",
-    "\n",
-    "The way that you are probably most familiar working with leading LLMs: through their tools.  \n",
-    "Some questions you can try asking them:\n",
-    "1. What kinds of business problem are most suitable for an LLM solution?\n",
-    "2. How many words are there in your answer to this prompt?\n",
-    "3. How many rainbows does it take to jump from Hawaii to seventeen?\n",
-    "4. What does it feel like to be jealous?\n",
-    "\n",
-    "**ChatGPT** from OpenAI needs no introduction.\n",
-    "\n",
-    "Let's try some hard questions, and use the new o1 model as well as GPT-4o. Also try GPT-4o with canvas.\n",
-    "\n",
-    "https://chatgpt.com/?model=gpt-4o\n",
-    "\n",
-    "**Claude** from Anthropic is favored by many data scientists, with focus on safety, personality and brevity.\n",
-    "\n",
-    "https://claude.ai/new\n",
-    "\n",
-    "**Gemini** from Google is becoming increasingly well known as its results are surfaced in Google searches.\n",
-    "\n",
-    "https://gemini.google.com/app\n",
-    "\n",
-    "**Command R+** from Cohere focuses on accuracy and makes extensive use of RAG\n",
-    "\n",
-    "https://coral.cohere.com/\n",
-    "\n",
-    "**Meta AI** from Meta is their chat UI on their famous Llama open-source model\n",
-    "\n",
-    "https://www.meta.ai/\n",
-    "\n",
-    "**Perplexity** from Perplexity is a Search Engine well known for its customized search results\n",
-    "\n",
-    "https://www.perplexity.ai/\n",
-    "\n",
-    "**LeChat** from Mistral is the Web UI from the French AI powerhouse\n",
-    "\n",
-    "https://chat.mistral.ai/\n",
-    "\n",
-    "**DeepSeek** from DeepSeek AI needs no introduction! Deepseek-R1 is the Reasoning model, V3 is their Chat model.\n",
-    "\n",
-    "https://chat.deepseek.com/\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a058d6a3-558f-4e12-aff6-5fa949ecd454",
-   "metadata": {},
-   "source": [
-    "## Conclusions and Takeways from exploring the Chat UIs\n",
-    "\n",
-    "- These models are astonishing\n",
-    "- Reasoning vs Chat models - different capabilities and use cases\n",
-    "- Price is highly competitive\n",
-    "\n",
-    "You'll find cost and other comparisons at this very useful leaderboard:\n",
-    "\n",
-    "https://www.vellum.ai/llm-leaderboard"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "24228179-fe9e-4098-8669-6898459eaa76",
    "metadata": {},
    "source": [
-    "## PART 2: Calling Frontier Models through APIs\n",
+    "## First: Calling Frontier Models through APIs\n",
     "\n",
     "## Setting up your keys\n",
     "\n",
@@ -278,6 +213,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f67a8cec",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "bbbbcc5b-8517-4a3e-9ca1-e860a072bb42",
    "metadata": {},
    "outputs": [],
@@ -308,12 +251,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "db01c3a5-6b2d-4ada-a1c5-d10e7993bebf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "challenge"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "25274e64-580b-4684-82dd-7f3253d9154e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_name = \"gpt-5-mini\"\n",
-    "response = openai.chat.completions.create(model=model_name, messages=challenge)\n",
+    "# new gpt-5-nano with new reasoning_effort=\"minimal\" setting\n",
+    "\n",
+    "model_name = \"gpt-5-nano\"\n",
+    "response = openai.chat.completions.create(model=model_name, messages=challenge, reasoning_effort=\"minimal\")\n",
     "reply = response.choices[0].message.content\n",
     "print(reply)"
    ]
@@ -397,28 +352,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9533840-b36b-49cc-bd42-4815960f3a06",
+   "id": "6ddbb3fe-6c9e-4f1a-ae16-c20445fc5758",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# o4-mini\n",
+    "# Claude 4.5 Sonnet\n",
     "\n",
-    "model_name = \"o4-mini\"\n",
+    "model_name = \"claude-sonnet-4-5\"\n",
     "\n",
-    "stream = openai.chat.completions.create(model=model_name, messages=challenge, stream=True)\n",
+    "stream = anthropic.chat.completions.create(model=model_name, messages=challenge, stream=True)\n",
     "record(model_name, stream)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ddbb3fe-6c9e-4f1a-ae16-c20445fc5758",
+   "id": "0358d543",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Claude 4.1 Opus\n",
+    "# Claude 4.5 Haiku\n",
     "\n",
-    "model_name = \"claude-opus-4-1-20250805\"\n",
+    "model_name = \"claude-haiku-4-5\"\n",
     "\n",
     "stream = anthropic.chat.completions.create(model=model_name, messages=challenge, stream=True)\n",
     "record(model_name, stream)"
@@ -505,40 +460,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ecd5a6a5-7e91-4deb-a62e-378d1949729b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Groq - llama-4-maverick 400B parameters in a mixture of experts \n",
-    "\n",
-    "model_name = \"meta-llama/llama-4-maverick-17b-128e-instruct\"\n",
-    "\n",
-    "stream = groq.chat.completions.create(model=model_name, messages=challenge, stream=True)\n",
-    "record(model_name, stream)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ce0bfcdf-2542-43ec-8f2c-abc3b1c67dae",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Groq - deepseek-r1-distill-llama-70b\n",
-    "\n",
-    "model_name = \"deepseek-r1-distill-llama-70b\"\n",
-    "\n",
-    "stream = groq.chat.completions.create(model=model_name, messages=challenge, stream=True)\n",
-    "record(model_name, stream)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "5db74d2f-8dfe-402f-9e74-a1c1d2a6fc7b",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Groq - OpenAI OSS 120B\n",
+    "\n",
     "model_name = \"openai/gpt-oss-120b\"\n",
     "\n",
     "stream = groq.chat.completions.create(model=model_name, messages=challenge, stream=True)\n",
@@ -550,15 +477,13 @@
    "id": "5b629b7b-01d6-46e9-bd9f-b5c1ec563419",
    "metadata": {},
    "source": [
-    "# Now for Part 3\n",
+    "# Now for local models\n",
     "\n",
-    "### Recap: first we tried Frontier LLMs through their chat interfaces\n",
-    "\n",
-    "### Then we called Cloud APIs\n",
+    "### First we called models in the cloud\n",
     "\n",
     "### And now:\n",
     "\n",
-    "Now try the 3rd way to use LLMs - direct inference of Open Source Models running locally with Ollama¶\n",
+    "Now try direct inference of Open Source Models running locally with Ollama\n",
     "Visit the README for instructions on installing Ollama locally.\n",
     "\n",
     "You can see some comparisons of Open Source models on the HuggingFace OpenLLM Leaderboard.\n",
@@ -573,7 +498,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!ollama pull llama3.2\n",
+    "!ollama pull gemma3:270m\n",
     "!ollama pull gpt-oss"
    ]
   },
@@ -607,7 +532,7 @@
    "source": [
     "# llama3.2\n",
     "\n",
-    "model_name = \"llama3.2\"\n",
+    "model_name = \"gemma3:270m\"\n",
     "\n",
     "stream = ollama.chat.completions.create(model=model_name, messages=challenge, stream=True)\n",
     "record(model_name, stream)"
@@ -622,7 +547,7 @@
    "source": [
     "# OpenAI OSS - the 20B version, not 120B, running on my computer!!\n",
     "\n",
-    "model_name = \"gpt-oss\"\n",
+    "model_name = \"gpt-oss:20b\"\n",
     "\n",
     "stream = ollama.chat.completions.create(model=model_name, messages=challenge, stream=True)\n",
     "record(model_name, stream)"
@@ -685,7 +610,7 @@
     "\n",
     "{together}\n",
     "\n",
-    "Now respond with the JSON with the ranked order of the competitors, nothing else. Do not include markdown formatting or code blocks.\"\"\"\n"
+    "Now respond with the JSON with the ranked order of the competitors, nothing else. Do not include markdown formatting or code blocks.\"\"\""
    ]
   },
   {
@@ -714,18 +639,6 @@
    "metadata": {},
    "source": [
     "# Not very scientific - but quite interesting!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9e9ddf64-e35d-4a3f-8389-8e0aa5e95ab8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "response = openai.chat.completions.create(model=\"gpt-5\",messages=judge_messages)\n",
-    "results = response.choices[0].message.content\n",
-    "print(results)"
    ]
   },
   {
@@ -795,7 +708,7 @@
     "# We're using cheap versions of models so the costs will be minimal\n",
     "\n",
     "gpt_model = \"gpt-4.1-nano\"\n",
-    "claude_model = \"claude-3-5-haiku-latest\"\n",
+    "claude_model = \"claude-haiku-4-5\"\n",
     "\n",
     "gpt_system = \"You are a chatbot who is very argumentative; \\\n",
     "you disagree with anything in the conversation and you challenge everything, in a snarky way.\"\n",
@@ -871,16 +784,16 @@
     "gpt_messages = [\"Hi there\"]\n",
     "claude_messages = [\"Hi\"]\n",
     "\n",
-    "print(f\"GPT:\\n{gpt_messages[0]}\\n\")\n",
-    "print(f\"Claude:\\n{claude_messages[0]}\\n\")\n",
+    "display(Markdown(f\"### GPT:\\n{gpt_messages[0]}\\n\"))\n",
+    "display(Markdown(f\"### Claude:\\n{claude_messages[0]}\\n\"))\n",
     "\n",
     "for i in range(5):\n",
     "    gpt_next = call_gpt()\n",
-    "    print(f\"GPT:\\n{gpt_next}\\n\")\n",
+    "    display(Markdown(f\"### GPT:\\n{gpt_next}\\n\"))\n",
     "    gpt_messages.append(gpt_next)\n",
     "    \n",
     "    claude_next = call_claude()\n",
-    "    print(f\"Claude:\\n{claude_next}\\n\")\n",
+    "    display(Markdown(f\"### Claude:\\n{claude_next}\\n\"))\n",
     "    claude_messages.append(claude_next)"
    ]
   },
@@ -905,55 +818,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96b2b8e3-182b-430b-9c89-d5e89f32a286",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# And just to show you how easy it is: let's generate an image\n",
-    "\n",
-    "from IPython.display import Image, display\n",
-    "import base64\n",
-    "\n",
-    "response = openai.images.generate(\n",
-    "  model=\"dall-e-3\",\n",
-    "  prompt=f\"A photorealistic 3d image that illustrates someone choosing between a huge number of Large Language Models\",\n",
-    "  size=\"1024x1024\",\n",
-    "  quality=\"standard\",\n",
-    "  n=1,\n",
-    "  response_format=\"b64_json\"\n",
-    ")\n",
-    "\n",
-    "# Extract the image data and display it\n",
-    "image_base64 = response.data[0].b64_json\n",
-    "image_data = base64.b64decode(image_base64)\n",
-    "display(Image(image_data))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6b7ead89-a107-429a-be0b-c61eb7264129",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "response = openai.images.generate(\n",
-    "  model=\"dall-e-3\",\n",
-    "  prompt=f\"An image that illustrates someone choosing between a huge number of Large Language Models in a vibrant pop-art style, like a Liechtenstein style, with dazzling lines and colors\",\n",
-    "  size=\"1024x1024\",\n",
-    "  quality=\"standard\",\n",
-    "  n=1,\n",
-    "  response_format=\"b64_json\"\n",
-    ")\n",
-    "\n",
-    "# Extract the image data and display it\n",
-    "image_base64 = response.data[0].b64_json\n",
-    "image_data = base64.b64decode(image_base64)\n",
-    "display(Image(image_data))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "31c5c512-a963-4f3f-b317-2de61459eea3",
    "metadata": {},
    "outputs": [],
@@ -962,7 +826,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -976,7 +840,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
