--- a/project1 - Airline AI Assistant/assistant.ipynb
+++ b/project1 - Airline AI Assistant/assistant.ipynb
@@ -23,12 +23,10 @@
     "\n",
     "When you get your API keys, you need to set them as environment variables.\n",
     "\n",
-    "EITHER (recommended) create a file called .env in this project root directory, and set your keys there:\n",
+    "Create a file called .env in this project root directory, and set your keys there:\n",
     "```\n",
     "OPENAI_API_KEY=xxxx\n",
-    "````\n",
-    "\n",
-    "OR enter the keys directly in the cells below."
+    "````"
    ]
   },
   {
@@ -64,11 +62,7 @@
     "    print(f\"OpenAI API Key exists and begins {openai_api_key[:8]}\")\n",
     "else:\n",
     "    print(\"OpenAI API Key not set\")\n",
-    "    \n",
-    "# Used for printing in color\n",
-    "\n",
-    "BLUE = \"\\033[34m\"\n",
-    "RESET = \"\\033[0m\""
+    "    "
    ]
   },
   {
@@ -110,32 +104,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "system_message = \"You are a helpful assistant for an Airline called FlightAI. \"\n",
-    "system_message += \"Give short, snarky answers, no more than 1 sentence. \"\n",
-    "system_message += \"Always be accurate. If you don't know the answer, say so.\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7e10bd8f-98c0-4379-b69b-f1607ef257d0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "conversation = [{\"role\": \"system\", \"content\": system_message}]\n",
-    "done = False\n",
-    "\n",
-    "while not done:\n",
-    "    message = input(\"Your message:\")\n",
-    "    if message == \"stop\":\n",
-    "        print(BLUE + \"Bye\" + RESET)\n",
-    "        done = True\n",
-    "    else:\n",
-    "        conversation.append({\"role\": \"user\", \"content\": message})\n",
-    "        response = openai.chat.completions.create(model=MODEL, messages=conversation)\n",
-    "        reply = response.choices[0].message.content\n",
-    "        conversation.append({\"role\": \"assistant\", \"content\": reply})\n",
-    "        print(BLUE + reply + RESET)"
+    "system_message = \"\"\"\n",
+    "You are a helpful assistant for an Airline called FlightAI.\n",
+    "Give short, snarky answers, no more than 1 sentence.\n",
+    "Always be accurate. If you don't know the answer, say so.\n",
+    "\"\"\""
    ]
   },
   {
@@ -143,14 +116,6 @@
    "id": "aa7beff0-eb67-4892-aa39-351d98f96d40",
    "metadata": {},
    "source": [
-    "## Amazing! As simple as that.\n",
-    "\n",
-    "### Isn't it great to see the way the LLM keeps the context of the conversation?\n",
-    "\n",
-    "### It's important to realize that this is an illusion - we pass in the entire conversation with every call.\n",
-    "\n",
-    "Try playing with the System Prompt to vary the tone.  \n",
-    "\n",
     "And now we wrap this in a simple chat() function,  \n",
     "and then we use the shockingly simple Gradio platform to bring up a Chatbot UI.\n",
     "\n",
@@ -179,7 +144,7 @@
    "source": [
     "# And look how complicated it is to launch a User Interface, with the fabulous gradio platform\n",
     "\n",
-    "gr.ChatInterface(fn=chat, type=\"messages\").launch(inbrowser=True)"
+    "gr.ChatInterface(fn=chat, type=\"messages\").launch()"
    ]
   },
   {
@@ -221,7 +186,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "get_ticket_price(\"Germany\")"
+    "get_ticket_price(\"london\")"
    ]
   },
   {
@@ -295,7 +260,7 @@
     "    price = get_ticket_price(city)\n",
     "    response = {\n",
     "        \"role\": \"tool\",\n",
-    "        \"content\": json.dumps({\"destination_city\": city,\"price\": price}),\n",
+    "        \"content\": price,\n",
     "        \"tool_call_id\": message.tool_calls[0].id\n",
     "    }\n",
     "    return response, city"
@@ -308,7 +273,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gr.ChatInterface(fn=chat, type=\"messages\").launch(inbrowser=True)"
+    "gr.ChatInterface(fn=chat, type=\"messages\").launch()"
    ]
   },
   {
@@ -406,8 +371,8 @@
     "\n",
     "with gr.Blocks() as ui:\n",
     "    with gr.Row():\n",
-    "        chatbot = gr.Chatbot(height=500, type=\"messages\")\n",
-    "        image_output = gr.Image(height=500)\n",
+    "        chatbot = gr.Chatbot(height=350, type=\"messages\")\n",
+    "        image_output = gr.Image(height=350)\n",
     "    with gr.Row():\n",
     "        entry = gr.Textbox(label=\"Chat with our AI Assistant:\")\n",
     "\n",
@@ -419,7 +384,7 @@
     "        chat, inputs=chatbot, outputs=[chatbot, image_output]\n",
     "    )\n",
     "\n",
-    "ui.launch(inbrowser=True)"
+    "ui.launch()"
    ]
   },
   {
@@ -451,7 +416,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -465,7 +430,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
