--- a/project2 - Expert knowledge worker/expert.ipynb
+++ b/project2 - Expert knowledge worker/expert.ipynb
@@ -25,34 +25,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# imports\n",
-    "\n",
     "import os\n",
     "import glob\n",
-    "from dotenv import load_dotenv\n",
-    "import gradio as gr"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "802137aa-8a74-45e0-a487-d1974927d7ca",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# imports for langchain, plotly and Chroma\n",
-    "\n",
-    "from langchain.document_loaders import DirectoryLoader, TextLoader\n",
-    "from langchain.text_splitter import CharacterTextSplitter\n",
-    "from langchain.schema import Document\n",
-    "from langchain_openai import OpenAIEmbeddings, ChatOpenAI\n",
-    "from langchain_chroma import Chroma\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sklearn.manifold import TSNE\n",
+    "import tiktoken\n",
     "import numpy as np\n",
+    "from dotenv import load_dotenv\n",
+    "from langchain_openai import ChatOpenAI, OpenAIEmbeddings\n",
+    "from langchain_chroma import Chroma\n",
+    "from langchain_core.messages import SystemMessage, HumanMessage, convert_to_messages\n",
+    "from langchain_huggingface import HuggingFaceEmbeddings\n",
+    "from langchain_community.document_loaders import DirectoryLoader, TextLoader\n",
+    "from langchain_text_splitters import RecursiveCharacterTextSplitter\n",
+    "from sklearn.manifold import TSNE\n",
     "import plotly.graph_objects as go\n",
-    "from langchain.memory import ConversationBufferMemory\n",
-    "from langchain.chains import ConversationalRetrievalChain"
+    "import gradio as gr"
    ]
   },
   {
@@ -64,26 +50,9 @@
    "source": [
     "# price is a factor for our company, so we're going to use a low cost model\n",
     "\n",
-    "MODEL = \"gpt-4.1-mini\"\n",
-    "db_name = \"vector_db\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ee78efcb-60fe-449e-a944-40bab26261af",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load environment variables in a file called .env\n",
-    "\n",
-    "load_dotenv()\n",
-    "openai_api_key = os.getenv('OPENAI_API_KEY')\n",
-    "\n",
-    "if openai_api_key:\n",
-    "    print(f\"OpenAI API Key exists and begins {openai_api_key[:8]}\")\n",
-    "else:\n",
-    "    print(\"OpenAI API Key not set\")"
+    "MODEL = \"gpt-4.1-nano\"\n",
+    "db_name = \"vector_db\"\n",
+    "load_dotenv(override=True)"
    ]
   },
   {
@@ -93,9 +62,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Read in documents using LangChain's loaders\n",
-    "# Take everything in all the sub-folders of our knowledgebase\n",
+    "knowledge_base_path = \"knowledge-base/**/*.md\"\n",
+    "files = glob.glob(knowledge_base_path, recursive=True)\n",
+    "print(f\"Found {len(files)} files in the knowledge base\")\n",
     "\n",
+    "entire_knowledge_base = \"\"\n",
+    "\n",
+    "for file_path in files:\n",
+    "    with open(file_path, 'r', encoding='utf-8') as f:\n",
+    "        entire_knowledge_base += f.read()\n",
+    "        entire_knowledge_base += \"\\n\\n\"\n",
+    "\n",
+    "print(f\"Total characters in knowledge base: {len(entire_knowledge_base):,}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "61c42ee9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "encoding = tiktoken.encoding_for_model(MODEL)\n",
+    "tokens = encoding.encode(entire_knowledge_base)\n",
+    "token_count = len(tokens)\n",
+    "print(f\"Total tokens for {MODEL}: {token_count:,}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51ceac18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "folders = glob.glob(\"knowledge-base/*\")\n",
     "\n",
     "documents = []\n",
@@ -117,10 +117,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "text_splitter = CharacterTextSplitter(chunk_size=1000, chunk_overlap=200)\n",
+    "text_splitter = RecursiveCharacterTextSplitter(chunk_size=1000, chunk_overlap=200)\n",
     "chunks = text_splitter.split_documents(documents)\n",
     "\n",
     "print(f\"Divided into {len(chunks)} chunks\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8c56f32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(chunks[0])"
    ]
   },
   {
@@ -152,14 +162,11 @@
     "# Put the chunks of data into a Vector Store that associates a Vector Embedding with each chunk\n",
     "# Chroma is a popular open source Vector Database based on SQLLite\n",
     "\n",
-    "embeddings = OpenAIEmbeddings()\n",
-    "\n",
-    "# Delete if already exists\n",
+    "embeddings = HuggingFaceEmbeddings(model_name=\"all-MiniLM-L6-v2\")\n",
+    "embeddings = OpenAIEmbeddings(model=\"text-embedding-3-large\")\n",
     "\n",
     "if os.path.exists(db_name):\n",
     "    Chroma(persist_directory=db_name, embedding_function=embeddings).delete_collection()\n",
-    "\n",
-    "# Create vectorstore\n",
     "\n",
     "vectorstore = Chroma.from_documents(documents=chunks, embedding=embeddings, persist_directory=db_name)\n",
     "print(f\"Vectorstore created with {vectorstore._collection.count()} documents\")"
@@ -205,7 +212,7 @@
     "vectors = np.array(result['embeddings'])\n",
     "documents = result['documents']\n",
     "metadatas = result['metadatas']\n",
-    "doc_types = [metadata['source'].split('/')[1] for metadata in metadatas]\n",
+    "doc_types = [metadata['doc_type'] for metadata in metadatas]\n",
     "colors = [['blue', 'green', 'red', 'orange'][['products', 'employees', 'contracts', 'company'].index(t)] for t in doc_types]"
    ]
   },
@@ -293,17 +300,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create a new Chat with OpenAI\n",
-    "llm = ChatOpenAI(temperature=0.5, model_name=MODEL)\n",
+    "llm = ChatOpenAI(temperature=0, model=MODEL)\n",
+    "retriever = vectorstore.as_retriever(search_kwargs={\"k\": 3})\n",
     "\n",
-    "# set up the conversation memory for the chat\n",
-    "memory = ConversationBufferMemory(memory_key='chat_history', return_messages=True)\n",
+    "SYSTEM_PROMPT_TEMPLATE = \"\"\"\n",
+    "You are a knowledgeable, friendly assistant representing the company Insurellm.\n",
+    "You are chatting with a user about Insurellm.\n",
+    "If relevant, use the given context to answer any question.\n",
+    "If you don't know the answer, say so.\n",
     "\n",
-    "# how many chunks to provide in each prompt\n",
-    "retriever = vectorstore.as_retriever(search_kwargs={\"k\": 25})\n",
+    "Context:\n",
+    "{context}\n",
+    "\"\"\"\n",
     "\n",
-    "# putting it together: set up the conversation chain with the GPT 3.5 LLM, the vector store and memory\n",
-    "conversation_chain = ConversationalRetrievalChain.from_llm(llm=llm, retriever=retriever, memory=memory)"
+    "def answer_question(question: str, history: list=[]) -> tuple[str, list]:\n",
+    "    docs = retriever.invoke(question, k=5)\n",
+    "    context = \"\\n\\n\".join(doc.page_content for doc in docs)\n",
+    "    system_prompt = SYSTEM_PROMPT_TEMPLATE.format(context=context)\n",
+    "    messages = [SystemMessage(content=system_prompt)]\n",
+    "    messages.extend(convert_to_messages(history))\n",
+    "    messages.append(HumanMessage(content=question))\n",
+    "    response = llm.invoke(messages)\n",
+    "    return response.content, docs"
    ]
   },
   {
@@ -316,8 +334,8 @@
     "# Let's try a simple question\n",
     "\n",
     "query = \"Please explain what Insurellm is in a couple of sentences\"\n",
-    "result = conversation_chain.invoke({\"question\": query})\n",
-    "print(result[\"answer\"])"
+    "result, chunks = answer_question(query)\n",
+    "print(f\"Answer: {result}\\n\\nContext: {chunks}\")"
    ]
   },
   {
@@ -337,62 +355,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Wrapping that in a function\n",
+    "def format_context(context):\n",
+    "    result = \"## Relevant Context\\n\\n\"\n",
+    "    for doc in context:\n",
+    "        result += f\"### From {doc.metadata['source']}\\n\\n\"\n",
+    "        result += doc.page_content + \"\\n\\n\"\n",
+    "    return result\n",
     "\n",
-    "def chat(question, history):\n",
-    "    result = conversation_chain.invoke({\"question\": question})\n",
-    "    return result[\"answer\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4350b660-88ae-4765-8203-16b02f1bb584",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Start the conversation again\n",
     "\n",
-    "memory = ConversationBufferMemory(memory_key='chat_history', return_messages=True)\n",
-    "conversation_chain = ConversationalRetrievalChain.from_llm(llm=llm, retriever=retriever, memory=memory)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b252d8c1-61a8-406d-b57a-8f708a62b014",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# And launch Gradio\n",
+    "def chat(history):\n",
+    "    last_message = history[-1][\"content\"]\n",
+    "    prior = history[:-1]\n",
+    "    answer, context = answer_question(last_message, prior)\n",
+    "    history.append({\"role\": \"assistant\", \"content\": answer})\n",
+    "    return history, format_context(context)\n",
     "\n",
-    "view = gr.ChatInterface(chat, type=\"messages\").launch(inbrowser=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b55e9abb-e1da-46c5-acba-911868aee329",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Let's investigate what gets sent behind the scenes\n",
+    "def put_message_in_chatbot(message, history):\n",
+    "    return \"\", history + [{\"role\": \"user\", \"content\": message}]\n",
     "\n",
-    "from langchain_core.callbacks import StdOutCallbackHandler\n",
+    "theme = gr.themes.Soft(font=[\"Inter\", \"system-ui\", \"sans-serif\"])\n",
     "\n",
-    "llm = ChatOpenAI(temperature=0.7, model_name=MODEL)\n",
-    "memory = ConversationBufferMemory(memory_key='chat_history', return_messages=True)\n",
-    "conversation_chain = ConversationalRetrievalChain.from_llm(\n",
-    "    llm=llm, \n",
-    "    retriever=vectorstore.as_retriever(), \n",
-    "    memory=memory,\n",
-    "    callbacks=[StdOutCallbackHandler()]\n",
-    ")\n",
+    "with gr.Blocks(title=\"Insurellm Expert Assistant\", theme=theme) as ui:\n",
+    "    gr.Markdown(\"# 🏢 Insurellm Expert Assistant\")\n",
     "\n",
-    "query = \"How many offices does Insurellm have?\"\n",
-    "result = conversation_chain.invoke({\"question\": query})\n",
-    "answer = result[\"answer\"]\n",
-    "print(\"\\nAnswer:\", answer)"
+    "    with gr.Row():\n",
+    "        with gr.Column(scale=1):\n",
+    "            chatbot = gr.Chatbot(\n",
+    "                label=\"💬 Conversation\", height=300, type=\"messages\", show_copy_button=True\n",
+    "            )\n",
+    "            message = gr.Textbox(\n",
+    "                label=\"Your Question\",\n",
+    "                placeholder=\"Ask anything about Insurellm...\",\n",
+    "                show_label=False,\n",
+    "            )\n",
+    "\n",
+    "        with gr.Column(scale=1):\n",
+    "            context_markdown = gr.Markdown(\n",
+    "                label=\"📚 Retrieved Context\",\n",
+    "                value=\"*Retrieved context will appear here*\",\n",
+    "                container=True,\n",
+    "                height=300,\n",
+    "            )\n",
+    "\n",
+    "    message.submit(\n",
+    "        put_message_in_chatbot, inputs=[message, chatbot], outputs=[message, chatbot]\n",
+    "    ).then(chat, inputs=chatbot, outputs=[chatbot, context_markdown])\n",
+    "\n",
+    "ui.launch()"
    ]
   },
   {
@@ -416,7 +425,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -430,7 +439,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
