Updates before showtime

--- a/intro/lab1.ipynb
+++ b/intro/lab1.ipynb
@@ -213,14 +213,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f67a8cec",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "bbbbcc5b-8517-4a3e-9ca1-e860a072bb42",
    "metadata": {},
    "outputs": [],
@@ -261,14 +253,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ef042068",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_name = \"gpt-4.1-nano\"\n",
+    "response = openai.chat.completions.create(model=model_name, messages=challenge)\n",
+    "response.choices[0].message.content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "25274e64-580b-4684-82dd-7f3253d9154e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# new gpt-5-nano with new reasoning_effort=\"minimal\" setting\n",
+    "# new gpt-5.1 with the new reasoning_effort=\"none\" setting\n",
     "\n",
-    "model_name = \"gpt-5-nano\"\n",
-    "response = openai.chat.completions.create(model=model_name, messages=challenge, reasoning_effort=\"minimal\")\n",
+    "model_name = \"gpt-5.1\"\n",
+    "response = openai.chat.completions.create(model=model_name, messages=challenge, reasoning_effort=\"none\")\n",
     "reply = response.choices[0].message.content\n",
     "print(reply)"
    ]
@@ -309,28 +313,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7204aa1f-aef2-490e-8a68-7fca90ce40d4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_name = \"gpt-5-mini\"\n",
-    "\n",
-    "stream = openai.chat.completions.create(model=model_name, messages=challenge, stream=True)\n",
-    "record(model_name, stream)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "3cdd2ee1-8b06-44a2-b4fe-164629d4c06d",
    "metadata": {},
    "outputs": [],
    "source": [
     "# GPT-5-nano\n",
     "\n",
-    "model_name = \"gpt-5-nano\"\n",
+    "model_name = \"gpt-5.1\"\n",
     "\n",
-    "stream = openai.chat.completions.create(model=model_name, messages=challenge, stream=True)\n",
+    "stream = openai.chat.completions.create(model=model_name, messages=challenge, stream=True, reasoning_effort=\"none\")\n",
     "record(model_name, stream)"
    ]
   },
@@ -343,9 +334,9 @@
    "source": [
     "# GPT-5\n",
     "\n",
-    "model_name = \"gpt-5\"\n",
+    "model_name = \"gpt-5.1\"\n",
     "\n",
-    "stream = openai.chat.completions.create(model=model_name, messages=challenge, stream=True)\n",
+    "stream = openai.chat.completions.create(model=model_name, messages=challenge, stream=True, reasoning_effort=\"medium\")\n",
     "record(model_name, stream)"
    ]
   },
@@ -358,24 +349,9 @@
    "source": [
     "# Claude 4.5 Sonnet\n",
     "\n",
-    "model_name = \"claude-sonnet-4-5\"\n",
+    "model_name = \"claude-opus-4-5\"\n",
     "\n",
-    "stream = anthropic.chat.completions.create(model=model_name, messages=challenge, stream=True)\n",
-    "record(model_name, stream)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0358d543",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Claude 4.5 Haiku\n",
-    "\n",
-    "model_name = \"claude-haiku-4-5\"\n",
-    "\n",
-    "stream = anthropic.chat.completions.create(model=model_name, messages=challenge, stream=True)\n",
+    "stream = anthropic.chat.completions.create(model=model_name, messages=challenge, stream=True, reasoning_effort=\"medium\")\n",
     "record(model_name, stream)"
    ]
   },
@@ -386,9 +362,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Gemini 2.5 Flash\n",
+    "# Gemini 2.5 Flash Lite\n",
     "\n",
-    "model_name = \"gemini-2.5-flash\"\n",
+    "model_name = \"gemini-2.5-flash-lite\"\n",
     "\n",
     "stream = gemini.chat.completions.create(model=model_name, messages=challenge, stream=True)\n",
     "record(model_name, stream)"
@@ -401,9 +377,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Gemini 2.5 Pro\n",
+    "# Gemini 3 Pro Preview\n",
     "\n",
-    "model_name = \"gemini-2.5-pro\"\n",
+    "model_name = \"gemini-3-pro-preview\"\n",
     "\n",
     "stream = gemini.chat.completions.create(model=model_name, messages=challenge, stream=True)\n",
     "record(model_name, stream)"
@@ -427,31 +403,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c4378a4-40ca-47bc-ac9f-dca175e49cbf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Deepseek-R1\n",
-    "# This takes too long! It can get stuck in a loop \n",
-    "\n",
-    "# model_name = \"deepseek-reasoner\"\n",
-    "\n",
-    "# response = deepseek.chat.completions.create(model=model_name, messages=challenge)\n",
-    "# reply = response.choices[0].message.content\n",
-    "\n",
-    "# record(model_name, reply)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "8a1d95fe-2ea5-43d9-bc3a-109c75d6058c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Grok from x.ai\n",
+    "# Grok 4.1 from x.ai\n",
     "\n",
-    "model_name = \"grok-4\"\n",
+    "model_name = \"grok-4-1-fast-reasoning\"\n",
     "\n",
     "stream = grok.chat.completions.create(model=model_name, messages=challenge, stream=True)\n",
     "record(model_name, stream)"
@@ -530,7 +488,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# llama3.2\n",
+    "# gemma3:270m\n",
     "\n",
     "model_name = \"gemma3:270m\"\n",
     "\n",
@@ -547,7 +505,7 @@
    "source": [
     "# OpenAI OSS - the 20B version, not 120B, running on my computer!!\n",
     "\n",
-    "model_name = \"gpt-oss:20b\"\n",
+    "model_name = \"gpt-oss\"\n",
     "\n",
     "stream = ollama.chat.completions.create(model=model_name, messages=challenge, stream=True)\n",
     "record(model_name, stream)"
@@ -602,7 +560,7 @@
     "\n",
     "{challenge[1][\"content\"]}\n",
     "\n",
-    "Your job is to evaluate each response for clarity and strength of argument and accuracy of word count, and rank them in order of best to worst.\n",
+    "Your job is to evaluate each response for clarity, creativity, communication and accuracy, and rank them in order of best to worst.\n",
     "Respond with JSON, and only JSON, with the following format:\n",
     "{{\"results\": [\"best competitor number\", \"second best competitor number\", \"third best competitor number\", ...]}}\n",
     "\n",
@@ -638,7 +596,9 @@
    "id": "9dc9d9e4-e9f1-4bce-ad5a-6212f9310d0f",
    "metadata": {},
    "source": [
-    "# Not very scientific - but quite interesting!"
+    "# Not very scientific - but quite interesting!\n",
+    "\n",
+    "And an illustration of \"LLM as a judge\" techniques."
    ]
   },
   {
