--- a/project2 - Expert knowledge worker/expert.ipynb
+++ b/project2 - Expert knowledge worker/expert.ipynb
@@ -138,18 +138,7 @@
    "id": "77f7d2a6-ccfa-425b-a1c3-5e55b23bd013",
    "metadata": {},
    "source": [
-    "## A sidenote on Embeddings, and \"Auto-Encoding LLMs\"\n",
-    "\n",
-    "We will be mapping each chunk of text into a Vector that represents the meaning of the text, known as an embedding.\n",
-    "\n",
-    "OpenAI offers a model to do this, which we will use by calling their API with some LangChain code.\n",
-    "\n",
-    "This model is an example of an \"Auto-Encoding LLM\" which generates an output given a complete input.\n",
-    "It's different to all the other LLMs we've discussed today, which are known as \"Auto-Regressive LLMs\", and generate future tokens based only on past context.\n",
-    "\n",
-    "Another example of an Auto-Encoding LLMs is BERT from Google. In addition to embedding, Auto-encoding LLMs are often used for classification.\n",
-    "\n",
-    "More details in the resources."
+    "## Now to turn these into Vectors and store in Chroma"
    ]
   },
   {
@@ -162,7 +151,7 @@
     "# Put the chunks of data into a Vector Store that associates a Vector Embedding with each chunk\n",
     "# Chroma is a popular open source Vector Database based on SQLLite\n",
     "\n",
-    "embeddings = HuggingFaceEmbeddings(model_name=\"all-MiniLM-L6-v2\")\n",
+    "# embeddings = HuggingFaceEmbeddings(model_name=\"all-MiniLM-L6-v2\")\n",
     "embeddings = OpenAIEmbeddings(model=\"text-embedding-3-large\")\n",
     "\n",
     "if os.path.exists(db_name):\n",
@@ -377,29 +366,14 @@
     "\n",
     "with gr.Blocks(title=\"Insurellm Expert Assistant\", theme=theme) as ui:\n",
     "    gr.Markdown(\"# 🏢 Insurellm Expert Assistant\")\n",
-    "\n",
     "    with gr.Row():\n",
     "        with gr.Column(scale=1):\n",
-    "            chatbot = gr.Chatbot(\n",
-    "                label=\"💬 Conversation\", height=300, type=\"messages\", show_copy_button=True\n",
-    "            )\n",
-    "            message = gr.Textbox(\n",
-    "                label=\"Your Question\",\n",
-    "                placeholder=\"Ask anything about Insurellm...\",\n",
-    "                show_label=False,\n",
-    "            )\n",
+    "            chatbot = gr.Chatbot(label=\"💬 Expert\", height=300, type=\"messages\", show_copy_button=True)\n",
+    "            message = gr.Textbox(label=\"Your Question\", placeholder=\"Ask anything about Insurellm...\",show_label=False)\n",
+    "        with gr.Column(scale=1):context_markdown = gr.Markdown(label=\"📚 Retrieved Context\",value=\"*Retrieved context will appear here*\",container=True,height=300)\n",
     "\n",
-    "        with gr.Column(scale=1):\n",
-    "            context_markdown = gr.Markdown(\n",
-    "                label=\"📚 Retrieved Context\",\n",
-    "                value=\"*Retrieved context will appear here*\",\n",
-    "                container=True,\n",
-    "                height=300,\n",
-    "            )\n",
-    "\n",
-    "    message.submit(\n",
-    "        put_message_in_chatbot, inputs=[message, chatbot], outputs=[message, chatbot]\n",
-    "    ).then(chat, inputs=chatbot, outputs=[chatbot, context_markdown])\n",
+    "    message.submit(put_message_in_chatbot, inputs=[message, chatbot], outputs=[message, chatbot]).then(\n",
+    "        chat, inputs=chatbot, outputs=[chatbot, context_markdown])\n",
     "\n",
     "ui.launch()"
    ]
