--- a/project1 - Airline AI Assistant/assistant.ipynb
+++ b/project1 - Airline AI Assistant/assistant.ipynb
@@ -42,7 +42,7 @@
     "import json\n",
     "from dotenv import load_dotenv\n",
     "from openai import OpenAI\n",
-    "from IPython.display import Markdown, display\n",
+    "from IPython.display import display\n",
     "import gradio as gr"
    ]
   },
@@ -72,9 +72,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# For our chatbot we will select GPT-4.1-nano due to the price efficiency\n",
+    "# For our chatbot we will select GPT-5-nano due to the price efficiency\n",
     "\n",
-    "MODEL = \"gpt-4.1-mini\"\n",
+    "MODEL = \"gpt-5-mini\"\n",
     "openai = OpenAI()"
    ]
   },
@@ -106,7 +106,7 @@
    "source": [
     "system_message = \"\"\"\n",
     "You are a helpful assistant for an Airline called FlightAI.\n",
-    "Give short, snarky answers, no more than 1 sentence.\n",
+    "Give short, humorous, snarky answers, no more than 1 sentence.\n",
     "Always be accurate. If you don't know the answer, say so.\n",
     "\"\"\""
    ]
@@ -131,7 +131,7 @@
    "source": [
     "def chat(message, history):\n",
     "    messages = [{\"role\": \"system\", \"content\": system_message}] + history + [{\"role\": \"user\", \"content\": message}]\n",
-    "    response = openai.chat.completions.create(model=MODEL, messages=messages)\n",
+    "    response = openai.chat.completions.create(model=MODEL, messages=messages, reasoning_effort=\"minimal\")\n",
     "    return response.choices[0].message.content"
    ]
   },
@@ -171,7 +171,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ticket_prices = {\"london\": \"$799\", \"paris\": \"$899\", \"tokyo\": \"$1400\", \"sydney\": \"$2999\", \"germany\": \"$899\"}\n",
+    "ticket_prices = {\"london\": \"$799\", \"paris\": \"$899\", \"tokyo\": \"$1400\", \"sydney\": \"$2999\"}\n",
     "\n",
     "def get_ticket_price(destination_city):\n",
     "    print(f\"Tool get_ticket_price called for {destination_city}\")\n",
@@ -186,7 +186,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "get_ticket_price(\"london\")"
+    "get_ticket_price(\"paris\")"
    ]
   },
   {
@@ -232,14 +232,14 @@
    "source": [
     "def chat(message, history):\n",
     "    messages = [{\"role\": \"system\", \"content\": system_message}] + history + [{\"role\": \"user\", \"content\": message}]\n",
-    "    response = openai.chat.completions.create(model=MODEL, messages=messages, tools=tools)\n",
+    "    response = openai.chat.completions.create(model=MODEL, messages=messages, tools=tools, reasoning_effort=\"minimal\")\n",
     "\n",
     "    if response.choices[0].finish_reason==\"tool_calls\":\n",
     "        message = response.choices[0].message\n",
     "        response, city = handle_tool_call(message)\n",
     "        messages.append(message)\n",
     "        messages.append(response)\n",
-    "        response = openai.chat.completions.create(model=MODEL, messages=messages)\n",
+    "        response = openai.chat.completions.create(model=MODEL, messages=messages, reasoning_effort=\"minimal\")\n",
     "    \n",
     "    return response.choices[0].message.content"
    ]
@@ -344,7 +344,7 @@
    "source": [
     "def chat(history):\n",
     "    messages = [{\"role\": \"system\", \"content\": system_message}] + history\n",
-    "    response = openai.chat.completions.create(model=MODEL, messages=messages, tools=tools)\n",
+    "    response = openai.chat.completions.create(model=MODEL, messages=messages, tools=tools, reasoning_effort=\"minimal\")\n",
     "    image = None\n",
     "    \n",
     "    if response.choices[0].finish_reason==\"tool_calls\":\n",
@@ -353,7 +353,7 @@
     "        messages.append(message)\n",
     "        messages.append(response)\n",
     "        image = artist_agent(city)\n",
-    "        response = openai.chat.completions.create(model=MODEL, messages=messages)\n",
+    "        response = openai.chat.completions.create(model=MODEL, messages=messages, reasoning_effort=\"minimal\")\n",
     "        \n",
     "    reply = response.choices[0].message.content\n",
     "    history += [{\"role\":\"assistant\", \"content\":reply}]\n",
