Ready for Feb showtime

--- a/intro/lab1.ipynb
+++ b/intro/lab1.ipynb
@@ -271,7 +271,7 @@
    "source": [
     "# new gpt-5.1 with the new reasoning_effort=\"none\" setting\n",
     "\n",
-    "model_name = \"gpt-5.1\"\n",
+    "model_name = \"gpt-5.2\"\n",
     "response = openai.chat.completions.create(model=model_name, messages=challenge, reasoning_effort=\"none\")\n",
     "reply = response.choices[0].message.content\n",
     "print(reply)"
@@ -319,7 +319,7 @@
    "source": [
     "# GPT-5-nano\n",
     "\n",
-    "model_name = \"gpt-5.1\"\n",
+    "model_name = \"gpt-5.2\"\n",
     "\n",
     "stream = openai.chat.completions.create(model=model_name, messages=challenge, stream=True, reasoning_effort=\"none\")\n",
     "record(model_name, stream)"
@@ -334,7 +334,7 @@
    "source": [
     "# GPT-5\n",
     "\n",
-    "model_name = \"gpt-5.1\"\n",
+    "model_name = \"gpt-5.2\"\n",
     "\n",
     "stream = openai.chat.completions.create(model=model_name, messages=challenge, stream=True, reasoning_effort=\"medium\")\n",
     "record(model_name, stream)"
@@ -505,7 +505,7 @@
    "source": [
     "# OpenAI OSS - the 20B version, not 120B, running on my computer!!\n",
     "\n",
-    "model_name = \"gpt-oss\"\n",
+    "model_name = \"gpt-oss:20b\"\n",
     "\n",
     "stream = ollama.chat.completions.create(model=model_name, messages=challenge, stream=True)\n",
     "record(model_name, stream)"
