--- a/intro/lab2.ipynb
+++ b/intro/lab2.ipynb
@@ -37,7 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "challenge = \"a baby lion inspired by Simba making his first address to his kingdom\"\n",
+    "challenge = \"A panda waterskiing\"\n",
     "prompt = f\"Generate an SVG of {challenge}. Respond with the SVG only, no code blocks.\"\n",
     "messages = [{\"role\": \"user\", \"content\": prompt}]\n",
     "\n",
