--- a/intro/lab3.ipynb
+++ b/intro/lab3.ipynb
@@ -44,7 +44,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "message = \"Write a python function that uses the Sieve of Eratosthenes to find the first 100 primes whose digits sum to 10 and explain it.\"\n",
+    "message = \"\"\"\n",
+    "Write a python function that uses the Sieve of Eratosthenes to find the first 100 primes whose digits sum to 10.\n",
+    "Explain your approach but don't try to predict the answer.\n",
+    "\"\"\"\n",
     "messages = [{\"role\": \"user\", \"content\": message}]"
    ]
   },
